--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.2.2
 environ==1.0
 idna==3.4
+Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==1.7.1
 pytz==2022.7.1
